fix: change scrollbar style for screens bigger than 768px

--- a/input.css
+++ b/input.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
     ::-webkit-scrollbar {
         height: 0.75vw;
         width: 0.75vw;
